Enabling testing on JDK25  - Turning on compiler annotation processing on JDK23+  - Disabling security manager properties setting on JDK25+  - Disabling tests using security manager framework on JDK25+  - Adding JDK25 to CI pipeline